--- a/batkiv_med/css/style.css
+++ b/batkiv_med/css/style.css
@@ -2,58 +2,161 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  background-color: #fff9ed;
+}
+
+body.active {
+  overflow: hidden;
+}
+
+p {
+  margin: 0;
+}
+
+.container {
+  padding: 0 90px;
 }
 
 .title {
-  font-family: Montserrat;
-  font-size: 24px;
-  font-weight: 400;
-  line-height: 34px;
-  letter-spacing: 0em;
-  text-align: center;
-  margin-bottom: 88px;
+  font-family: Oswald;
+  font-size: 31px;
+  font-weight: 500;
+  line-height: 43px;
+  letter-spacing: 0.25px;
 }
 
 .btn {
-  background-color: #fac249;
+  background-color: #fdaf01;
   color: #fff;
-  border-radius: 5px;
-  width: 209px;
-  height: 41px;
+  border-radius: 1px;
+  width: 154px;
+  height: 34px;
   transition: ease-in-out 0.7s;
+  font-family: Oswald;
+  font-size: 13px;
+  font-weight: 500;
+  line-height: 18px;
+  letter-spacing: 1.25px;
+  padding: 0;
 }
 
 .header__title {
-  font-family: Montserrat;
-  font-size: 48px;
+  font-family: Oswald;
+  font-size: 88px;
   font-weight: 500;
-  line-height: 67px;
-  letter-spacing: 0em;
-  text-align: left;
+  line-height: 123px;
+  letter-spacing: -1.5px;
   text-transform: uppercase;
-  padding-bottom: 20px;
 }
 
 .header__text {
-  font-family: Montserrat;
-  font-size: 24px;
+  font-family: Open Sans;
+  font-size: 16px;
   font-weight: 400;
-  line-height: 34px;
-  letter-spacing: 0em;
-  text-align: left;
+  line-height: 22px;
+  letter-spacing: 0.5px;
+  margin-bottom: 42px;
 }
 
 .header {
   margin-bottom: 100px;
+  position: relative;
+}
+.header .burger {
+  display: none;
+  height: 40px;
+  width: 40px;
+  flex-direction: column;
+  z-index: -3;
+  position: relative;
+  margin-top: 16px;
+}
+.header .burger .bar {
+  display: block;
+  width: 40px;
+  height: 2px;
+  margin: 5px auto;
+  background-color: #ffae2b;
+  transition: transform 0.2s ease-in;
+}
+.header .burger.active .bar:nth-child(1) {
+  transform: translateY(14px) rotate(45deg);
+}
+.header .burger.active .bar:nth-child(2) {
+  opacity: 0;
+}
+.header .burger.active .bar:nth-child(3) {
+  transform: translateY(-11px) rotate(-45deg);
+}
+.header .nav__list {
+  display: flex;
+  flex-direction: row;
+  gap: 30px;
+}
+.header .nav__link {
+  text-decoration: none;
+  color: #aca592;
+  font-weight: 400;
+  font-size: 11px;
+  line-height: 24px;
+  padding: 8px 5px;
+  display: inline-block;
+  transition: color 0.2s ease-in;
+}
+.header .nav__link:hover {
+  color: #ffae2b;
+}
+@media screen and (max-width: 767px) {
+  .header .nav__list {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: #fff9ed;
+    z-index: 2;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .header .nav__list.active {
+    display: flex;
+  }
+  .header .burger {
+    z-index: 3;
+  }
+}
+.header .burger {
+  display: flex;
+  cursor: pointer;
+}
+.header .nav-item {
+  font-family: Oswald;
+  font-size: 15px;
+  font-weight: 400;
+  line-height: 21px;
+  letter-spacing: 0.15px;
+  text-align: center;
+}
+.header .uk-navbar-nav > li > a {
+  color: #0b0b0d;
+}
+
+.uk-navbar-nav {
+  gap: 24px;
 }
 
 .our-apiary__text {
-  font-family: Source Sans Pro;
-  font-size: 17px;
+  font-family: Open Sans;
+  font-size: 16px;
   font-weight: 400;
-  line-height: 24px;
+  line-height: 22px;
   letter-spacing: 0.5px;
   text-align: left;
+}
+.our-apiary .first {
+  margin-bottom: 24px;
 }
 .our-apiary__link {
   font-family: Source Sans Pro;
@@ -67,65 +170,92 @@
   transition: ease-in-out 0.7s;
 }
 
-.best-honey__text {
-  font-family: Montserrat;
-  font-size: 20px;
+.why-us__text {
+  font-family: Open Sans;
+  font-size: 16px;
   font-weight: 400;
-  line-height: 28px;
-  letter-spacing: 0.25px;
-  text-align: left;
+  line-height: 22px;
+  letter-spacing: 0.5px;
+  margin-bottom: 64px;
 }
 
+.summer-honey__text {
+  font-family: Open Sans;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0.5px;
+  text-align: center;
+}
+
+.products__subtitle {
+  margin-bottom: 64px;
+}
+.products__text {
+  font-family: Open Sans;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 22px;
+  letter-spacing: 0.5px;
+}
 .products__title {
-  font-family: Montserrat;
-  font-size: 24px;
-  font-weight: 400;
-  line-height: 34px;
-  letter-spacing: 0em;
+  font-family: Oswald;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 25px;
+  letter-spacing: 0.15px;
   text-align: center;
-  color: #43403e;
-}
-.products__snbtitle {
-  font-family: Source Sans Pro;
-  font-size: 17px;
-  font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0.5px;
-  text-align: center;
-  color: #43403e;
-}
-.products__status {
-  font-family: Source Sans Pro;
-  font-size: 17px;
-  font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0.5px;
-  text-align: center;
-  color: #00936a;
-}
-.products__status_not {
-  font-family: Source Sans Pro;
-  font-size: 17px;
-  font-weight: 400;
-  line-height: 24px;
-  letter-spacing: 0.5px;
-  text-align: center;
-  color: #c1554d;
+  text-transform: uppercase;
+  margin: 0 0 8px 0;
 }
 .products__price {
-  font-family: Montserrat;
-  font-size: 24px;
+  font-family: Oswald;
+  font-size: 15px;
   font-weight: 400;
-  line-height: 34px;
-  letter-spacing: 0em;
+  line-height: 21px;
+  letter-spacing: 0.15px;
   text-align: center;
+  color: #fdaf01;
 }
 
 .card {
-  background-color: #fff8e8;
+  background-color: #fff9ed;
 }
 
 .reviews__text {
-  color: #43403e;
+  color: #0b0b0d;
+  font-family: Open Sans;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 28px;
+  letter-spacing: 1.15px;
+  text-align: left;
+  margin: 0 0 56px 0;
+}
+.reviews__name {
+  font-family: Oswald;
+  font-size: 18px;
+  font-weight: 500;
+  line-height: 25px;
+  letter-spacing: 0.15px;
+  text-align: left;
+  color: #0b0b0d;
+  text-transform: uppercase;
+}
+.reviews__data {
+  color: #fdaf01;
+  margin: 0;
+}
+
+.contact__tel a {
+  text-decoration: none;
+  color: #7e7c7b;
+  font-family: Oswald;
+  font-size: 31px;
+  font-weight: 500;
+  line-height: 43px;
+  letter-spacing: 0.25px;
+  text-align: left;
+  margin-right: 24px;
 }
 /*# sourceMappingURL=style.css.map */
